Fix overflow and scrolling issues, dynamic colours to content loaders, & champion links

--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -3,7 +3,7 @@
 }
 
 html {
-  overflow-x: hidden;
+  overflow: hidden;
   width: 100vw;
 }
 
